force-app/main/default/objects/WC_NAICS_To_Industry_Map__c/WC_NAICS_To_Industry_Map__c.object-meta.xml
<CustomObject>
    <label>WC NAICS To Industry Map</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>NAICS Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WC NAICS To Industry Maps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>