force-app/main/default/objects/WC_NAICS_To_Industry_Map__c/fields/Industry_Name__c.field-meta.xml
<CustomField>
    <fullName>Industry_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Industry Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>