force-app/main/default/objects/WC_NAICS_To_Industry_Map__c/fields/PEO_Industry_Title__c.field-meta.xml
<CustomField>
    <fullName>PEO_Industry_Title__c</fullName>
    <label>PEO Industry Title</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Retail/Wholesale</fullName>
            </value>
            <value>
                <fullName>Restaurants</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Hotels</fullName>
            </value>
            <value>
                <fullName>Home Health</fullName>
            </value>
            <value>
                <fullName>Doctor&apos;s Offices</fullName>
            </value>
            <value>
                <fullName>Auto Dealership</fullName>
            </value>
            <value>
                <fullName>Auto Service/Repair/Autobody Collision/Paint Shop</fullName>
            </value>
            <value>
                <fullName>Auto/Truck Rental</fullName>
            </value>
            <value>
                <fullName>Banks</fullName>
            </value>
            <value>
                <fullName>Contractors/Construction/Service Traders including Plumbing/HVAC/Electrician</fullName>
            </value>
            <value>
                <fullName>Delivery Trucking exposure</fullName>
            </value>
            <value>
                <fullName>Marinas</fullName>
            </value>
            <value>
                <fullName>Veterinary services (State National)</fullName>
            </value>
            <value>
                <fullName>Golf/Country Club</fullName>
            </value>
            <value>
                <fullName>Landscapers</fullName>
            </value>
            <value>
                <fullName>Jewelry Store</fullName>
            </value>
            <value>
                <fullName>Gas Stations with convenience Stores or Grocery Stores</fullName>
            </value>
            <value>
                <fullName>School/Day care</fullName>
            </value>
            <value>
                <fullName>Not for Profit</fullName>
            </value>
            <value>
                <fullName>Property Management</fullName>
            </value>
            <value>
                <fullName>Fencing Contractors</fullName>
            </value>
            <value>
                <fullName>Warehouse/Storage</fullName>
            </value>
            <value>
                <fullName>Furniture</fullName>
            </value>
            <value>
                <fullName>Garment Industry</fullName>
            </value>
            <value>
                <fullName>Moving Companies</fullName>
            </value>
            <value>
                <fullName>Assisted Living Facility</fullName>
            </value>
            <value>
                <fullName>Commercial Janitorial Services</fullName>
            </value>
            <value>
                <fullName>NY Exposure</fullName>
            </value>
            <value>
                <fullName>Physical Distribution Logistics Consulting Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>