force-app/main/default/objects/WC_NAICS_To_Industry_Map__c/fields/Required_With_WC_FastPass__c.field-meta.xml
<CustomField>
    <fullName>Required_With_WC_FastPass__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Required With WC FastPass</label>
    <type>Checkbox</type>
</CustomField>