force-app/main/default/objects/WC_NAICS_To_Industry_Map__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>NAICS_Title__c</columns>
    <columns>PEO_Industry_Title__c</columns>
    <columns>COVID_Questionnaire_Required__c</columns>
    <columns>Industry_Name__c</columns>
    <columns>Required_With_WC_FastPass__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>